# agent-weiss

./: .gitignore  README.md  bundle.yaml  pyproject.toml
.claude/skills/agent-weiss/: SKILL.md
.github/workflows/: ci.yml
docs/: spec.md
profiles/python/: manifest.yaml
profiles/python/domains/quality/controls/ruff-config/: check.sh  instruct.md  policy.rego  policy_test.rego  prescribed.yaml
profiles/python/domains/quality/controls/ty-config/: check.sh  instruct.md  prescribed.yaml
profiles/python/domains/testing/controls/coverage-config/: check.sh  instruct.md  policy.rego  policy_test.rego  (+1 more)
profiles/typescript/: manifest.yaml
profiles/universal/: manifest.yaml
scripts/: run_rego_check.sh
src/agent_weiss/lib/: bundle.py  contract.py  hashing.py  reconcile.py  rego.py  schemas.py  state.py
src/agent_weiss/lib/setup/: __init__.py  apply.py  backup.py  batch.py  cascade.py  dry_run.py  gap.py  types.py  verbs.py
src/agent_weiss/lib/verify/: __init__.py  dispatch.py  report.py  score.py  types.py
tests/: test_bundle.py  test_contract.py  test_control_completeness.py  test_fixture_runner.py  test_hashing.py  test_reconcile.py  test_reconcile_render.py  test_rego.py  test_rego_unit_tests.py  test_schemas_bundle.py  test_schemas_prescribed.py  test_setup_apply.py  test_setup_backup.py  test_setup_batch.py  test_setup_cascade.py  test_setup_dry_run.py  test_setup_gap.py  test_setup_types.py  test_setup_verbs.py  test_state.py  test_verify_dispatch.py  test_verify_report.py  test_verify_score_quality.py  test_verify_score_setup.py  test_verify_types.py
(+75 files in other folders)
