[project]
name = "agent-weiss"
version = "0.0.1"
description = "Skill-first agent-readiness audit and setup for any codebase"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{name = "Denis Tomilin"}]

dependencies = [
    "ruamel.yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/yoselabs/agent-weiss"
Repository = "https://github.com/yoselabs/agent-weiss"
Issues = "https://github.com/yoselabs/agent-weiss/issues"

# Note: no [project.scripts] section in Plan 1. Helper modules are invoked
# by skill.md via `python -m agent_weiss.lib.<module>`; CLI entry points
# (if needed) come in Plan 5 (Distribution Packaging).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_weiss"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "ty>=0.0.1a3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
